Log Features Histogram PageVisists correctly for SVGImage

After the change in https://chromium.googlesource.com/chromium/src/+/f4426ca725afeca47bc5e76a03fd5e525e34bf6c [formerly 6bb29391a86f2be58c626170156cbfaa2cbc5c91]

SVGImage pages no longer call Page::DidCommitLoad in path of loading, which
dropped the PageVisists counts for Blink.UseCounter.SVGImage.Features histogram.

Calling UseCounter::DidCommitLoad in SVGImage upon load complete fixed this
issue. The fix has been locally verified.

Bug: 787503
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I082ba0cffb021233dad40eadecd88694b9a21c95
Reviewed-on: https://chromium-review.googlesource.com/786330
Commit-Queue: Luna Lu <loonybear@chromium.org>
Reviewed-by: Fredrik Söderquist <fs@opera.com>
Cr-Commit-Position: refs/heads/master@{#518953}
Former-commit-id: 0bf269cd8533eb5ab4c595df46e09bdc5e36f3a1