third_party/WebKit/Source/core/frame/LocalFrame.cpp
@@ -1156,6 +1156,11 @@ void LocalFrame::ForceSynchronousDocumentInstall(
         return true;
       });
   GetDocument()->Parser()->Finish();
+
+  // Upon loading of the page, log PageVisits in UseCounter.
+  KURL url = GetDocument()->Url();
+  if (Client() && Client()->ShouldTrackUseCounter(url))
+    GetPage()->GetUseCounter().DidCommitLoad(url);
 }
 
 }  // namespace blink
